k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nimbus
  labels:
    app.kubernetes.io/managed-by: argocd
